<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="mbn_validate">MBN Validate</string>
    <string name="mbn_file_load">MBN File Load</string>
    <string name="mbn_file_load_hw">HW MBN Configuration</string>
    <string name="mbn_file_load_sw">SW MBN Configuration</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">MBN Test</string>
    <string name="mismacth_hit">Mismatch happened between android multi-mode configuration and modem configuration, Need to reconfigure and reboot for synchronization. Press OK to take effect immediately.</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="location_hint">Current Location:</string>
    <string name="exit">Exit</string>
    <string name="activate">Activate</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="loaded">Loaded:</string>
    <string name="success">Success:</string>
    <string name="source_application">Application</string>
    <string name="source_golden">Golden</string>
    <string name="source_pc">PC</string>
    <string name="location_configuration">Location Configuration</string>
    <string name="phone_storage">Phone Storage</string>
    <string name="sdcard">SD Card</string>
    <string name="exit_mbnfileload">Exit MbnFileLoad</string>
    <string name="current_config">Current MBN Config</string>
    <string name="check_config_hint">Device is not configured properly, please configure device.</string>
    <string name="choose_config_hit">Config Options</string>
    <string name="activate_hint">Activating Confirm</string>
    <string name="activate_description">Do you really want to activate this MBN?</string>
    <string name="sub1">SUB1</string>
    <string name="empty" />
    <string name="sub2">SUB2</string>
    <string name="sub3">SUB3</string>
    <string name="mbn_id">Meta:</string>
    <string name="mobile_data">Data: Off</string>
    <string name="data_roaming">Data roaming: Off</string>
    <string name="confirm">Confirm</string>
    <string name="Activating_hint">Activating, please wait.</string>
    <string name="mbn_name">MBN:</string>
    <string name="device_type">Device Type:</string>
    <string name="carrier_name">Carrier:</string>
    <string name="source">Source:</string>
    <string name="begin_to_validate">Begin to validate sub %1$s</string>
    <string name="other_sub_is_validating">Other sub is validating</string>
    <string name="sub_is_validating">Sub %1$s is validating</string>
    <string name="get_qcver_fail">Failed to get QC version</string>
    <string name="get_activated_qcver_fail">Failed to get activated mbn QC version</string>
    <string name="sub_validation_done">sub %1$s validation done</string>
    <string name="fail_to_copy_file">Failed to copy file</string>
    <string name="fail_to_handle_dir">Failed to handle dir %1$s</string>
    <string name="fail_to_find_godlen_mbn">Failed to find golden MBN</string>
    <string name="fail_to_activate_mbn">Failed to activate MBN</string>
    <string name="same_mbn_with_activated">Same as activated MBN: %1$s . Ignore!!!</string>
    <string name="ref_value">Ref:</string>
    <string name="cur_value">Cur:</string>
    <string name="rule1">should be set to</string>
    <string name="rule2">for primary sub should be set to</string>
    <string name="rule3">for secondary sub should be set to</string>
    <string name="rule4">is incorrect. Please check</string>
    <string name="rule5">is changed. Suggest to use the default value</string>
    <string name="ppp_number">ppp_number</string>
    <string name="read_only">read_only</string>
    <string name="localized_name">localized_name</string>
    <string name="v_mccmnc">v_mccmnc</string>
    <string name="default_protocol">IP</string>
    <string name="oem_mbn">OEM MBN</string>
    <string name="qc_mbn">Reference MBN</string>
</resources>
