<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/validate_sub1" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sub1" android:layout_toLeftOf="@id/centerPoint" android:layout_alignParentLeft="true" />
        <TextView android:id="@id/centerPoint" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/empty" android:layout_centerHorizontal="true" />
        <Button android:id="@id/validate_sub2" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sub2" android:layout_toRightOf="@id/centerPoint" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <ExpandableListView android:id="@id/nv_diff_data" android:layout_width="fill_parent" android:layout_height="fill_parent" android:cacheColorHint="#00000000" />
</LinearLayout>