<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="10.0dip" android:text="@string/location_hint" />
        <TextView android:textSize="14.0sp" android:textColor="#ccffffff" android:id="@id/location_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" />
    </LinearLayout>
    <View android:layout_width="fill_parent" android:layout_height="10.0dip" />
    <TextView android:textAppearance="?android:listSeparatorTextViewStyle" android:id="@id/config_hint" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="20.0dip" />
    <View android:background="#ff393939" android:layout_width="fill_parent" android:layout_height="1.7999878dip" />
    <ListView android:layout_gravity="center|left" android:id="@id/mbn_file_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="27.0dip">
        <Button android:textSize="18.0sp" android:textColor="#ccffffff" android:id="@id/back_button" android:layout_width="142.0dip" android:layout_height="48.0dip" android:text="@string/back" />
        <Button android:textSize="18.0sp" android:textColor="#ccffffff" android:layout_gravity="right" android:id="@id/load_button" android:layout_width="142.0dip" android:layout_height="48.0dip" android:text="@string/next" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>